--- a/WeifangDemo/app/build.gradle
+++ b/WeifangDemo/app/build.gradle
@@ -4,14 +4,25 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.bsit.pboard"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         ndk {
             // 设置支持的SO库架构
-            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+            abiFilters 'armeabi', 'armeabi-v7a' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
         }
+
+//        sourceSets.main{
+//            jni.srcDirs = []
+//            jniLibs.srcDir "src/main/jniLibs"
+//        }
+
+//        sourceSets {
+//            main {
+//                jniLibs.srcDirs = ['src/main/jniLibs']
+//            }
+//        }
     }
     buildTypes {
         release {
